--- a/CSS/stupidStuff.css
+++ b/CSS/stupidStuff.css
@@ -1,7 +1,28 @@
-.images {
+#images {
     column-count: 2;
     column-gap: 2.5%;
 }
+.images {
+    display: inline;
+    position: relative;
+    text-align: center;
+}
 .images img {
     z-index: -1;
+}
+.images img, .images p {
+    min-width: 470px;
+}
+.images p {
+    margin-top: -100px;
+    position: absolute;
+    display: none;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.images:hover p {
+    display: block;
+}
+.images:hover {
+    color: rgba(255, 255, 255, 25%)
 }
