--- a/CSS/default.css
+++ b/CSS/default.css
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6, p, a, li {
     width: 100%;
     height: 55px;
     display: grid;
-    grid: 50px / 75px 225px 225px;
+    grid: 50px / 75px 200px 200px;
     grid-column-gap: 0px;
     transition: background-color 1s ease-in-out 0s;
     -o-transition: background-color 1s ease-in-out 0s;
@@ -30,11 +30,15 @@ h1, h2, h3, h4, h5, h6, p, a, li {
     background-color: #494B4A;
 } 
 #navBar div a {
+    margin-top: 3px;
     display: block;
     font-size: 40px;
     text-decoration: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     height: 70px;
-    width: 225px;
+    width: 200px;
     text-align: center;
     opacity: 100%;
     color: #494B4A;
@@ -53,14 +57,14 @@ h1, h2, h3, h4, h5, h6, p, a, li {
 #navBar div {
     background-color: rgba(0, 0, 0, 0);
     height: 55px;
-    width: 225px;
+    width: 200px;
     transition: background-color 1s ease-in-out 0s;
     -o-transition: background-color 1s ease-in-out 0s;
     -webkit-transition: background-color 1s ease-in-out 0s;
     -moz-transition: background-color 1s ease-in-out 0s;
 }
 #navBar div:hover {
-    background-color: rgba(0, 0, 0, 100%)
+    background-color: rgba(0, 0, 0, 100%);
 }
 img {
     width: 100%;
@@ -79,9 +83,8 @@ h3 {
     background-color: #0080AD;
     border-radius: 50%;
     margin: auto;
-    height: 25px;
-    width: 200px;
-    font-size: 20px;
+    height: 40px;
+    font-size: 30px;
     text-align: center;
     text-decoration: none;
     transition: background-color 1s ease-in-out 0s;
