--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,6 +1,7 @@
 #mePic {
-    width: 50%;
-    margin: 0 25% 0 25%;
+    display: block;
+    width: 25%;
+    margin: auto;
 }
 #top {
     font-size: 75px;
