--- a/CSS/default.css
+++ b/CSS/default.css
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6, p, a, li {
     width: 100%;
     height: 40px;
     display: grid;
-    grid: 40px / 55px 125px 125px;
+    grid-template: 40px / 55px 125px 125px;
     grid-column-gap: 0px;
     transition: background-color 500ms ease-in-out 0s;
     -o-transition: background-color 500ms ease-in-out 0s;
@@ -83,7 +83,8 @@ h3 {
 .button {
     background-color: #0080AD;
     border-radius: 50%;
-    width: 12.5%;
+    width: 12.5%;   
+    min-width: 150px;
     height: 25px;
     font-size: 20px;
     padding: 0 4px 0 4px;
@@ -109,5 +110,5 @@ h3 {
 }
 #buttons {
     display: grid;
-    grid: 25px / auto;
+    grid-template: 25px / auto auto;;
 }
