--- a/CSS/default.css
+++ b/CSS/default.css
@@ -23,7 +23,7 @@ img {
     width: 100%;
     height: 40px;
     display: grid;
-    grid-template: 40px / 55px 125px 125px;
+    grid-template: 40px / 55px 125px 125px 125px;
     grid-column-gap: 0px;
     transition: background-color 500ms ease-in-out 0s;
     -o-transition: background-color 500ms ease-in-out 0s;
@@ -60,6 +60,7 @@ img {
 #navBar * {
     display: inline;
     top: 0;
+    bottom: 0;
 }
 #navBar div {
     background-color: rgba(0, 0, 0, 0);
