--- a/CSS/default.css
+++ b/CSS/default.css
@@ -18,6 +18,7 @@ img {
 }
 #navBar {
     top: 0;
+    bottom: 0;
     position: sticky;
     background-color: #0080AD;
     width: 100%;
@@ -25,10 +26,10 @@ img {
     display: grid;
     grid-template: 40px / 55px 125px 125px 125px;
     grid-column-gap: 0px;
-    transition: background-color 500ms ease-in-out 0s;
-    -o-transition: background-color 500ms ease-in-out 0s;
-    -webkit-transition: background-color 500ms ease-in-out 0s;
-    -moz-transition: background-color 500ms ease-in-out 0s;
+    transition: background-color 250ms ease-in-out 0s;
+    -o-transition: background-color 250ms ease-in-out 0s;
+    -webkit-transition: background-color 250ms ease-in-out 0s;
+    -moz-transition: background-color 250ms ease-in-out 0s;
     z-index: 10;
 }
 #navBar:hover {
@@ -45,13 +46,13 @@ img {
     height: 40px;
     width: 125px;
     text-align: center;
-    padding: 3px 0;
+    padding: 3px 0 0 0;
     opacity: 100%;
     color: #494B4A;
-    transition: color 500ms ease-in-out 0s;
-    -o-transition: color 500ms ease-in-out 0s;
-    -webkit-transition: color 500ms ease-in-out 0s;
-    -moz-transition: color 500ms ease-in-out 0s;
+    transition: color 250ms ease-in-out 0s;
+    -o-transition: color 250ms ease-in-out 0s;
+    -webkit-transition: color 250ms ease-in-out 0s;
+    -moz-transition: color 250ms ease-in-out 0s;
 }
 #navBar:hover div a {
     overflow: visible;
@@ -66,38 +67,19 @@ img {
     background-color: rgba(0, 0, 0, 0);
     height: 40px;
     width: 125px;
-    transition: background-color 500ms ease-in-out 0s;
-    -o-transition: background-color 500ms ease-in-out 0s;
-    -webkit-transition: background-color 500ms ease-in-out 0s;
-    -moz-transition: background-color 500ms ease-in-out 0s;
+    transition: background-color 250ms ease-in-out 0s;
+    -o-transition: background-color 250ms ease-in-out 0s;
+    -webkit-transition: background-color 250ms ease-in-out 0s;
+    -moz-transition: background-color 250ms ease-in-out 0s;
 }
 #navBar div:hover {
     background-color: rgba(0, 0, 0, 100%);
 }
-.dropdown div {
-    background-color: #494B4A;
-    height: 0px;
-    transition: height 250ms ease-in-out 0s;
-    -o-transition: height 250ms ease-in-out 0s;
-    -webkit-transition: height 250ms ease-in-out 0s;
-    -moz-transition: height 250ms ease-in-out 0s;
+#navBar .dropdown:hover {
+    background-color: rgba(0, 0, 0, 0)
 }
-.dropdown div a {
-    font-size: 0px;
-    height: 0px;
-    background-color: rgba(0, 0, 0, 0);
-    transition: font-size 250ms ease-in-out 0s;
-    -o-transition: font-size 250ms ease-in-out 0s;
-    -webkit-transition: font-size 250ms ease-in-out 0s;
-    -moz-transition: font-size 250ms ease-in-out 0s;
-    transition: height 250ms ease-in-out 0s;
-    -o-transition: height 250ms ease-in-out 0s;
-    -webkit-transition: height 250ms ease-in-out 0s;
-    -moz-transition: height 250ms ease-in-out 0s;
-    transition: background-color 500ms ease-in-out 0s;
-    -o-transition: background-color 500ms ease-in-out 0s;
-    -webkit-transition: background-color 500ms ease-in-out 0s;
-    -moz-transition: background-color 500ms ease-in-out 0s;
+#navBar:hover #dropdown1 div {
+    visibility: visible;
 }
 h1 {
     text-decoration: underline;
@@ -120,10 +102,10 @@ h3 {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    transition: background-color 500ms ease-in-out 0s;
-    -o-transition: background-color 500ms ease-in-out 0s;
-    -webkit-transition: background-color 500ms ease-in-out 0s;
-    -moz-transition: background-color 500ms ease-in-out 0s;
+    transition: background-color 250ms ease-in-out 0s;
+    -o-transition: background-color 250ms ease-in-out 0s;
+    -webkit-transition: background-color 250ms ease-in-out 0s;
+    -moz-transition: background-color 250ms ease-in-out 0s;
 }
 .button:hover {
     background-color: #55AED9;
